# online-chess

./: .gitignore  CMakeLists.txt  main.cpp
include/: Bishop.h  Board.h  CPiece.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
src/: Bishop.cpp  Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
