cmake_minimum_required(VERSION 3.24)
project(online-chess)

set(CMAKE_CXX_STANDARD 20)
set(PIECES src/Queen.cpp src/Rook.cpp src/Bishop.cpp src/Knight.cpp src/King.cpp src/Pawn.cpp)
add_library(pieces ${PIECES})
add_library(board src/Board.cpp)
add_executable(main main.cpp)
target_include_directories(main PRIVATE include)
target_include_directories(board PRIVATE include)
target_include_directories(pieces PRIVATE include)
target_link_libraries(board PRIVATE pieces)
target_link_libraries(main pieces)
target_link_libraries(main board)
